- Makefile util/boot.c: Fixed pseudo-cold boot when EmuTOS loads itself. (VRI)
- bios/blkdev.c: Initialize drvbits to avoid bogus drives in EmuTOS-RAM. (VRI)
- bios/acsi.c bios/floppy.c: Minor reordering between caches and locks. (VRI)

2013-02-20
- bios/startup.S: Fixed startup regression in emutos-cartridge. (VRI)

2013-02-21
- bios/startup.S: Disable the interrupts at startup even on cartridge. (VRI)
- bios/startup.S include/config.h: Fixed reset for non-Atari hardware. (VRI)
- bios/panicasm.S: Better cold boot on the FireBee. (VRI)

2013-02-22
- po/gr.po: Updated Greek translation. Contributed by Christos Tziotzis. (VRI)

2013-02-23
- aes/gemfslib.c: Initialize newdrive.  Thanks to David Savinkoff. (RFB)

2013-02-25
- util/boot.c util/bootasm.S: Add i-cache invalidation (68030 only). (RFB)

2013-02-26
- bios/floppy.c: Fix bug: floppy auto-detect did not work properly on
  real hardware. (RFB)
- bios/floppy.c: Floppy i/o failed when i/o accesses were more than
  0.5secs apart. (RFB)

2013-02-27
- bios/blkdev.c bios/blkdev.h bios/floppy.c: Flop_mediach() now checks
  for either TOS or MSDOS serial number change. (RFB)

* Release: 0.9.0

2013-03-01

- bios/dmasound.* bios/xbios.c: Added the core XBIOS DMA sound functions. (THH)
- aes/gemrslib.c: Code cleanup: eliminate OB_ macros. (RFB)
- aes/gemoblib.c: Code cleanup: eliminate OB_ macros. (RFB)
- desk/deskact.c: Code cleanup: eliminate OB_ macros. (RFB)
- bdos/fs.h bdos/fsdrive.c bdos/fsio.c: Performance: replaced divmod()
  with shift/mask. (RFB)
- bdos/fsfat.c: Performance: replace multiply with shift. (RFB)
- desk/deskdir.c: Code cleanup: eliminate OB_ macros. (RFB)
- doc/*: Updated. Contributed by Eero Tamminen. (VRI)

2013-03-02
- bios/xbios.c: Fixed GCC warning messages. (RFB)
- desk/desksupp.c: Code cleanup: eliminate OB_ macros. (RFB)
- desk/deskmain.c: Code cleanup: eliminate OB_ macros. (RFB)
- desk/deskinf.c: Code cleanup: eliminate OB_ macros. (RFB)